# canvas_grade_calculator

./: .gitignore  README.md  canvas_grade_calculator.py  config_example.yaml  note.txt  pyproject.toml  requirements.txt  setup_canvas_grade_config.py
