[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "canvas-grade-calculator"
version = "0.1.0"
description = "Canvas LMS grade calculator with weights, policies, and CSV export"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["canvas", "grades", "lms", "cli"]
dependencies = [
  "requests>=2.28",
  "pydantic>=1.10,<2.0",
  "pyyaml>=6.0",
]

authors = [
  { name = "Paul Brotelande", email = "paul@brotel.org" }
]

[project.scripts]
canvas = "canvas_grade_calculator:main"

[tool.setuptools]
py-modules = ["canvas_grade_calculator"]
